# MCMC_Colorer

./: .gitignore  CMakeLists.txt  ColorerProject.sln  README.md  TODO.txt  convertDataset.py  convertReddit.py  datasetGenerator.cpp  istruzioni_accesso_remoto.txt  logParser.py  logger.conf  readme.me  readme.txt  run.sh  tempGraph.cpp  test.sh  testColoring_Benchmark.cu  testColoring_GG.cu  testSelfArcs.py
ColorerProject/: ColorerProject.vcxproj  ColorerProject.vcxproj.filters  ColorerProject_cuda 10.0.vcxproj  ColorerProject_cuda10.0.vcxproj  lab.txt
DatasetGenerator/: DatasetGenerator.vcxproj  DatasetGenerator.vcxproj.filters
GPUutils/: GPURandomizer.cu  GPURandomizer.h  GPUStream.cu  GPUStream.h  GPUutils.h
graph/: graph.h  graphGPU.cu
graph_coloring/: colorer.cpp  coloring.h  coloringLuby.cu  coloringLuby.h  coloringLubyFast.cu  coloringMCMC.cu  coloringMCMC.h  coloringMCMC_CPU.cpp  coloringMCMC_CPU.h
pyScripts/: convertReddit.py  doVarCol3DGraph.py  doVarCol3DGraph_new.py  testSelfArcs.py
src/: CMakeLists.txt  datasetGenerator.cpp  logger.conf  main.cu  testColoring_Benchmark.cu  testColoring_Benchmark.cu.orig  testColoring_Benchmark_orig.cu
src/GPUutils/: GPUCudaCleaner.cu  GPUCudaCleaner.h  GPURandomizer.cu  GPURandomizer.h  GPUStream.h
src/getopt/: getopt.h
src/graph/: graph.h  graph.h.orig  graphCPU.cpp  graphCPU.cpp.orig  graphGPU.cu
src/graph_coloring/: colorer.cpp  coloring.h  coloringGreedyFF.cu  coloringGreedyFF.h  coloringLuby.cu  coloringLuby.h  coloringLubyFast.cu  coloringMCMC.cu  coloringMCMC.h  coloringMCMC_CPU.cpp  coloringMCMC_CPU.h  coloringMCMC_CPUutils.cpp  coloringMCMC_balance.cu  coloringMCMC_decrease.cu  coloringMCMC_main.cu  coloringMCMC_prints.cu  coloringMCMC_standard.cu  coloringMCMC_utils.cu  coloringVFF.cu  coloringVFF.h  newColoringMCMC.cu  newColoringMCMC.h  old_coloringMCMC.cu  old_coloringMCMC.h
src/test/: CMakeLists.txt  fillTest.cpp
src/utils/: ArgHandle.cpp  ArgHandle.h  dbg.cpp  dbg.h  fileExporter.cpp  fileExporter.h  fileImporter.cpp  fileImporter.h  miscUtils.cpp  miscUtils.h  timer.cpp  timer.h
txt/: TODO.txt  consegne dicembre.txt  esecuzione standard + esponenziale - 25000 - 0.01.txt  esecuzione standard + standard - 25000 - 0.01.txt  esecuzione standard + standard - 25000 - 0.05.txt  esecuzione standard + standard - dinamici - 25000 - 0.01.txt  istruzioni_linux.txt  modifiche dalab.txt
txt/results/100000-25001995-results/: 100000-25001995-colorsFile-0.txt  100000-25001995-colorsFile-1.txt  100000-25001995-colorsFile-2.txt  100000-25001995-colorsFile-3.txt  100000-25001995-colorsFile-4.txt  100000-25001995-colorsFile-5.txt  100000-25001995-colorsFile-6.txt  100000-25001995-colorsFile-7.txt  100000-25001995-colorsFile-8.txt  100000-25001995-colorsFile-9.txt  100000-25001995-logFile-0.txt  100000-25001995-logFile-1.txt  100000-25001995-logFile-2.txt  100000-25001995-logFile-3.txt  100000-25001995-logFile-4.txt  100000-25001995-logFile-5.txt  100000-25001995-logFile-6.txt  100000-25001995-logFile-7.txt  100000-25001995-logFile-8.txt  100000-25001995-logFile-9.txt  100000-25001995-resultsFile-0.txt  100000-25001995-resultsFile-1.txt  100000-25001995-resultsFile-2.txt  100000-25001995-resultsFile-3.txt  100000-25001995-resultsFile-4.txt  100000-25001995-resultsFile-5.txt  100000-25001995-resultsFile-6.txt  100000-25001995-resultsFile-7.txt  100000-25001995-resultsFile-8.txt  100000-25001995-resultsFile-9.txt
txt/results/100000-5000332-results/: 100000-5000332-colorsFile-0.txt  100000-5000332-colorsFile-1.txt  100000-5000332-colorsFile-2.txt  100000-5000332-colorsFile-3.txt  100000-5000332-colorsFile-4.txt  100000-5000332-colorsFile-5.txt  100000-5000332-colorsFile-6.txt  100000-5000332-colorsFile-7.txt  100000-5000332-colorsFile-8.txt  100000-5000332-colorsFile-9.txt  100000-5000332-logFile-0.txt  100000-5000332-logFile-1.txt  100000-5000332-logFile-2.txt  100000-5000332-logFile-3.txt  100000-5000332-logFile-4.txt  100000-5000332-logFile-5.txt  100000-5000332-logFile-6.txt  100000-5000332-logFile-7.txt  100000-5000332-logFile-8.txt  100000-5000332-logFile-9.txt  100000-5000332-resultsFile-0.txt  100000-5000332-resultsFile-1.txt  100000-5000332-resultsFile-2.txt  100000-5000332-resultsFile-3.txt  100000-5000332-resultsFile-4.txt  100000-5000332-resultsFile-5.txt  100000-5000332-resultsFile-6.txt  100000-5000332-resultsFile-7.txt  100000-5000332-resultsFile-8.txt  100000-5000332-resultsFile-9.txt
txt/results/100000-50012531-results/: 100000-50012531-FINAL.txt  100000-50012531-colorsFile-0.txt  100000-50012531-colorsFile-1.txt  100000-50012531-colorsFile-2.txt  100000-50012531-colorsFile-3.txt  100000-50012531-colorsFile-4.txt  100000-50012531-colorsFile-5.txt  100000-50012531-colorsFile-6.txt  100000-50012531-colorsFile-7.txt  100000-50012531-colorsFile-8.txt  100000-50012531-colorsFile-9.txt  100000-50012531-logFile-0.txt  100000-50012531-logFile-1.txt  100000-50012531-logFile-2.txt  100000-50012531-logFile-3.txt  100000-50012531-logFile-4.txt  100000-50012531-logFile-5.txt  100000-50012531-logFile-6.txt  100000-50012531-logFile-7.txt  100000-50012531-logFile-8.txt  100000-50012531-logFile-9.txt  100000-50012531-resultsFile-0.txt  100000-50012531-resultsFile-1.txt  100000-50012531-resultsFile-2.txt  100000-50012531-resultsFile-3.txt  100000-50012531-resultsFile-4.txt  100000-50012531-resultsFile-5.txt  100000-50012531-resultsFile-6.txt  100000-50012531-resultsFile-7.txt  100000-50012531-resultsFile-8.txt  100000-50012531-resultsFile-9.txt
txt/results/150000-11250803-results/: 150000-11250803-colorsFile-0.txt  150000-11250803-colorsFile-1.txt  150000-11250803-colorsFile-2.txt  150000-11250803-colorsFile-3.txt  150000-11250803-colorsFile-4.txt  150000-11250803-colorsFile-5.txt  150000-11250803-colorsFile-6.txt  150000-11250803-colorsFile-7.txt  150000-11250803-colorsFile-8.txt  150000-11250803-colorsFile-9.txt  150000-11250803-logFile-0.txt  150000-11250803-logFile-1.txt  150000-11250803-logFile-2.txt  150000-11250803-logFile-3.txt  (+16 more)
utils/: ArgHandle.cpp  ArgHandle.h  dbg.cpp  miscUtils.h
(+437 files in other folders)
